--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="products">
         <div class="one">
             <div>
-                <img src="C:\Users\dell\Desktop\SDR\aone.jpg" width="200" height="200">
+                <img src="./aone.jpg" width="200" height="200">
             </div>
             <div>
                 <h3>Aone</h3>
@@ -70,7 +70,7 @@
         </div>
         <div class="two">
             <div>
-                <img src="C:\Users\dell\Desktop\SDR\chozen.png" width="200" height="200">
+                <img src="./chozen.png" width="200" height="200">
             </div>
             <div>
                 <h3>Chozen & Happy</h3>
