--- a/products.html
+++ b/products.html
@@ -46,28 +46,28 @@
     <div class="gallery">
         
         <div>
-            <img src="C:\Users\dell\Desktop\SDR\51PdBxXgn0L.jpg">
+            <img src="./51PdBxXgn0L.jpg">
         </div>
         <div>
-            <img src="C:\Users\dell\Desktop\SDR\51VLJzV8NhL.jpg">
+            <img src="./51VLJzV8NhL.jpg">
         </div>
         <div>
-            <img src="C:\Users\dell\Desktop\SDR\417bRBIbcrL.jpg">
+            <img src="./417bRBIbcrL.jpg">
         </div>
         <div>
-            <img src="C:\Users\dell\Desktop\SDR\a-one-cleaning-powder.jpg">
+            <img src="./a-one-cleaning-powder.jpg">
         </div>
         <div>
-            <img src="C:\Users\dell\Desktop\SDR\download (1).jpeg">
+            <img src="./download (1).jpeg (1).jpeg">
         </div>
         <div>
-            <img src="C:\Users\dell\Desktop\SDR\download (2).jpeg">
+            <img src="./download (2).jpeg (2).jpeg">
         </div>
         <div>
-            <img src="C:\Users\dell\Desktop\SDR\download.jpeg">
+            <img src="./download.jpeg">
         </div>
         <div>
-            <img src="C:\Users\dell\Desktop\SDR\products_qg1fw8.jpg">
+            <img src="./products_qg1fw8.jpg">
         </div>
     </div>
     <script src="script.js"></script>
