--- a/products.html
+++ b/products.html
@@ -58,10 +58,10 @@
             <img src="./a-one-cleaning-powder.jpg">
         </div>
         <div>
-            <img src="./download (1).jpeg (1).jpeg">
+            <img src="./download (1).jpeg">
         </div>
         <div>
-            <img src="./download (2).jpeg (2).jpeg">
+            <img src="./download (2).jpeg">
         </div>
         <div>
             <img src="./download.jpeg">
