--- a/products.html
+++ b/products.html
@@ -58,7 +58,7 @@
             <img src="./a-one-cleaning-powder.jpg">
         </div>
         <div>
-            <img src="./download (1).jpeg">
+            <img src="./download (1).jpeg>
         </div>
         <div>
             <img src="./download (2).jpeg">
